--- a/style.css
+++ b/style.css
@@ -1,41 +1,32 @@
+/* Page two container holding the image and the text */
+.imagecontainer {
+   position: relative;
+   text-align: center;
+   color: white;
+}
+/* Page two text */
+.top-left {
+   position: absolute;
+ text-align: left;
+ font-size:1.1em ;
+   top: 50px;
+   left: 50px;
+}
 .jumbotron {
-      background-size: cover;
-      padding-top: 15%;
-      padding-bottom: 10%;
-    }
-body, html {
-    height: 100%;
+     background-size: cover;
+     background-color: ;
+     padding-top: 15%;
+ padding-bottom: 15%;
 }
-.bg {
-    /* The image used */
-    background-image: url("img_girl.jpg");
-
-    /* Full height */
-    height: 100%;
-
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
 .nav-item{
-   color:white;
-  font-size: 1.5em;
- }
-
-.pageone{
-  /*background:url("https://images.unsplash.com/photo-1460602692976-8eab38c11f9d");*/
-  text-align: center;
-  background-color:#e9eff1;
-  padding-bottom:10%;
-}
-.pageone h1{
-    color:red;
+  color:yellow;
+ font-size: 1.5em;
 }
 .btn-default{
-  background-color:white;
-  border-color:black;
-  color:#788692;
-  font-size:1.5em;
-  margin-top:20px;
+ background-color:white;
+ border-color:black;
+ color:#788692;
+ font-size:1em;
+ margin-top:20px;
+ margin-bottom:20px;
+}
